--- a/index.html
+++ b/index.html
@@ -101,13 +101,24 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <form id="contact-form">
+        <style>
+            h2 {
+
+                font-size: 2.5rem;
+                text-align: center;
+                margin-bottom: 2rem;
+                color: #007bff;
+
+
+            }
+        </style>
+        <form action="https://formspree.io/f/mvgzqogw" method="POST">
           <!-- Optional Fields -->
-          <input type="text" name="name" placeholder="Name (optional)">
-          <input type="email" name="email" placeholder="Email (optional)">
+          <input type="text" name="name" placeholder="Your Name ">
+          <input type="email" name="email" placeholder="Email ">
           
           <!-- Required Message Field -->
-          <textarea name="message" placeholder="Message (required)" required></textarea>
+          <textarea name="message" placeholder="Message " required></textarea>
           
           <button type="submit">Send</button>
         </form>
