--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpg" href="NG logonew.jpg">
     <title>Niranjan Ghising</title>
     <link rel="stylesheet" href="style.css">
     <!-- Font Awesome for icons -->
@@ -134,5 +135,6 @@
     </footer>
 
     <script src="script.js"></script>
+
 </body>
 </html>
