--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="images/NG logonew.jpg">
+    <link rel="icon" type="image/jpg" href="images/NG_logo.png">
     <title>Niranjan Ghising</title>
     <link rel="stylesheet" href="style.css">
     <!-- Font Awesome for icons -->
@@ -28,7 +28,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="images/NG logonew.jpg" alt="Niranjan Ghising Logo" class="logo-img">
+                <img src="images/NG_logo.png" alt="Niranjan Ghising Logo" class="logo-img">
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -76,7 +76,7 @@
                         I'm a detail-oriented individual with a strong foundation in programming and a growing passion for data analysis. I'm actively developing my skills in data manipulation, visualization, and machine learning to become a valuable asset in a data-driven organization.
                     </p>
                     <div class="cv-download">
-                        <a href="images/NiranjanGhising_dataAnalyst_Resume.pdf" download class="cv-button">
+                        <a href="images/NiranjanGhising_DataAnalystInter_Resume.pdf" download class="cv-button">
                             📄 View my Resume
                         </a>
                     </div>
