--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;700&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <meta name="description" content="Niranjan Ghising - Aspiring Data Analyst portfolio. Explore my projects, skills, certifications, and contact information. Specialized in Python, SQL, and data visualization.">
+    <meta name="keywords" content="Niranjan Ghising, Data Analyst, Python, SQL, Portfolio, Data Visualization, Projects, Kathmandu, Nepal, Analytics, Resume, GitHub, LinkedIn">
     
 </head>
 <body>
+    <!-- Scroll Progress Bar -->
+    <div id="scrollProgressBar"></div>
     <div class="hero-animated-icons">
         <i class="fab fa-python icon-1"></i>
         <i class="fas fa-database icon-2"></i>
@@ -31,13 +35,19 @@
                 <img src="images/NG_logo.png" alt="Niranjan Ghising Logo" class="logo-img">
             </div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#certifications">Certifications</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home" class="nav-anchor">Home</a></li>
+                <li><a href="#about" class="nav-anchor">About</a></li>
+                <li><a href="#skills" class="nav-anchor">Skills</a></li>
+                <li><a href="#certifications" class="nav-anchor">Certifications</a></li>
+                <li><a href="#projects" class="nav-anchor">Projects</a></li>
+                <li><a href="#contact" class="nav-anchor">Contact</a></li>
             </ul>
+            <!-- Hamburger menu for mobile -->
+            <div class="hamburger" id="hamburgerMenu" aria-label="Open navigation" tabindex="0">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <div class="theme-switch-wrapper">
                 <label class="theme-switch" for="checkbox">
                     <input type="checkbox" id="checkbox" />
@@ -53,11 +63,14 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Hi, I'm <span class="highlight hero-name-font">Niranjan Ghising</span></h1>
-                    <p>An aspiring Data Analyst with a passion for uncovering insights from data. I have a solid foundation in Python and SQL, and I'm excited to apply my skills to solve real-world problems.</p>
+                    <p>
+                        <span id="typing-animation"></span>
+                        <noscript>An aspiring Data Analyst with a passion for uncovering insights from data. I have a solid foundation in Python and SQL, and I'm excited to apply my skills to solve real-world problems.</noscript>
+                    </p>
                     <a href="#projects" class="cta-button">View My Work</a>
                 </div>
                 <div class="hero-image">
-                    <img src="images/normalNiranjan.jpg" alt="A picture of Niranjan Ghising" loading="lazy">
+                    <img src="images/normalNiranjan.jpg" alt="A picture of Niranjan Ghising smiling in a casual setting" loading="lazy">
                 </div>
             </div>
         </section>
@@ -76,7 +89,7 @@
                         I'm a detail-oriented individual with a strong foundation in programming and a growing passion for data analysis. I'm actively developing my skills in data manipulation, visualization, and machine learning to become a valuable asset in a data-driven organization.
                     </p>
                     <div class="cv-download">
-                        <a href="images/NiranjanGhising_DataAnalystInter_Resume.pdf" download class="cv-button">
+                        <a href="images/NiranjanGhising_DataAnalystInter_Resume.pdf" target="_blank" rel="noopener noreferrer" class="cv-button">
                             📄 View my Resume
                         </a>
                     </div>
