--- a/index.html
+++ b/index.html
@@ -156,16 +156,21 @@
             <h2 class="section-title">Certifications</h2>
             <div class="certifications-grid">
                 <div class="certification-card">
-                    <h3>Python Intermediate</h3>
+                    <h3>Python Master</h3>
                     <p>Details about the certification from Programiz Pro.</p>
-                    <a href="https://programiz.pro/certificates/detail/C6B5224BA435" target="_blank" class="certification-link">View Certificate</a>
+                    <a href="https://programiz.pro/certificates/4F44BBB91694" target="_blank" class="certification-link">View Certificate</a>
                 </div>
                 <div class="certification-card">
                     <h3>SQL</h3>
                     <p>Details about the certification from Programiz Pro.</p>
                     <a href="https://programiz.pro/certificates/detail/55D684D40A4B" target="_blank" class="certification-link">View Certificate</a>
                 </div>
-                <!-- Add more certification cards as needed -->
+                <div class="certification-card">
+                    <h3>NumPY for Data Science</h3>
+                    <p>Details about the certification from Programiz Pro.</p>
+                    <a href="https://programiz.pro/certificates/F890E9705D38" target="_blank" class="certification-link">View Certificate</a>
+                </div>
+                
             </div>
         </section>
 
