--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
     }
     </script>
     <!-- Analytics -->
-    <script defer data-domain="niranjanghising.com.np" src="https://plausible.io/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
-    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+    <script defer data-domain="niranjanghising.com.np" src="https://plausible.io/js/script.file-downloads.outbound-links.pageview-props.revenue.tagged-events.js"></script>
+<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
 
 </head>
 <body>
